# ultraviolet

./: CHANGELOG.md  Cargo.toml  README.md  release.toml
.github/: FUNDING.yml
.github/workflows/: ci.yaml
derivations/: rotor2_rotate_vec_derivation.txt  rotor3_rotate_rotor_derivation.txt
docs/: rotor2_rotate_rotor_derivation.txt  rotor2_rotate_vec_derivation.txt  rotor3_rotate_derivation.txt  rotor3_rotate_rotor_derivation.txt  rotor3_rotate_vec_derivation.txt
src/: bivec.rs  conversion.rs  geometry.rs  impl_bytemuck.rs  impl_mint.rs  impl_serde.rs  int.rs  interp.rs  lerp.rs  lib.rs  mat.rs  pga.rs  projection.rs  rotor.rs  serde.rs  shim.rs  traits.rs  transform.rs  util.rs  vec.rs
src/pga2d/: mod.rs
src/pga3d/: mod.rs
src/projection/: lh_ydown.rs  lh_yup.rs  rh_ydown.rs  rh_yup.rs
src/standard/: bivec.rs  geometry.rs  mod.rs  rotor.rs  transform.rs
src/standard/vec/: int.rs  mod.rs  vec2.rs  vec3.rs  vec4.rs
src/vec/: mod.rs  num_traits.rs  vec2.rs  vec3.rs  vec4.rs
