[package]
name = "ultraviolet"
version = "0.7.0-alpha0"
authors = ["Gray Olson <gray@grayolson.com>"]
edition = "2018"
description = "A crate to do linear algebra, fast."
repository = "https://github.com/termhn/ultraviolet"
readme = "README.md"
keywords = ["simd", "wide", "graphics", "math", "linear-algebra"]
license = "MIT OR Apache-2.0 OR Zlib"

[dependencies]
# wide = { path = "../wide" }
wide = { version = "~0.5.2" }
serde = { version = "1.0", features = [], optional = true }

[features]
default = [ ]
pga2d = []
pga3d = []
f64 = []
int = []
geometry = [ ]

[dev-dependencies]
serde_test = "1.0"
