[package]
name = "ultraviolet"
version = "0.11.0"
authors = ["Gray Olson <gray@grayolson.com>"]
edition = "2024"
description = "A crate to do linear algebra, fast."
repository = "https://github.com/termhn/ultraviolet"
readme = "README.md"
keywords = ["simd", "wide", "graphics", "math", "linear-algebra"]
license = "MIT OR Apache-2.0 OR Zlib"

[package.metadata.docs.rs]
all-features = true

[dependencies]
# wide = { path = "../wide", optional = true }
wide = { version = "0.7" }
serde = { version = "1.0", features = [], optional = true }
mint = { version = "0.5", optional = true }
bytemuck = { version = "1.22", optional = true }
num-traits = { version = "0.2", optional = true }

[features]
default = ["int"]
f64 = []
int = []
serde = ["dep:serde"]
mint = ["dep:mint"]
bytemuck = ["dep:bytemuck"]
num-traits = ["dep:num-traits"]

[dev-dependencies]
serde_test = "1.0"
